# SCL3300-TiltSesor

./: 10.0.0.2  Cargo.toml
src/: lib.rs  main.rs  tiltsensor.rs
